# use stringUtils