@@ -1,5 +1,6 @@
 package com.example.demo.global.security.jwt.extractor;
 
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.context.annotation.Primary;
 import org.springframework.security.authentication.AuthenticationServiceException;
 import org.springframework.stereotype.Component;
@@ -11,7 +12,7 @@ public class JwtHeaderTokenExtractor implements TokenExtractor {
 
     @Override
     public String extract(String header) {
-        if (header == null || header.isBlank()) {
+        if (StringUtils.isBlank(header)) {
             throw new AuthenticationServiceException("Authorization header cannot be blank!");
         }
 
